# duckcp

./: .gitignore  README.md  app.py  pyproject.toml
docs/: feishu-bitable-getting-started.md
duckcp/: __init__.py
duckcp/boot/: __init__.py  meta_command.py  repository_command.py  storage_command.py  task_command.py  transformer_command.py
duckcp/configuration/: __init__.py  logging_configuration.py  meta_configuration.py
duckcp/constant/: __init__.py
duckcp/entity/: __init__.py  connection.py  credential.py  executor.py  repository.py  snapshot.py  statement.py  storage.py  task.py  task_transformer.py  transform_context.py  transformer.py
duckcp/feishu/: __init__.py  bitable.py
duckcp/helper/: click.py  collection.py  digest.py  fs.py  http.py  serialization.py  sql.py  validation.py
duckcp/migration/: 001-repositories.sql  002-storages.sql  003-transformers.sql  004-credentials.sql  005-snapshots.sql  006-tasks.sql  007-tasks-transformers.sql  __init__.py
duckcp/projection/: __init__.py  repository_projection.py  storage_projection.py  task_projection.py  task_transformer_projection.py  transformer_projection.py
duckcp/repository/: __init__.py  bitable_repository.py  duckdb_repository.py  file_repository.py  odps_repository.py  postgres_repository.py  sqlite_repository.py
duckcp/service/: __init__.py  authentication_service.py  meta_service.py  repository_service.py  snapshot_service.py  storage_service.py  task_service.py  transformer_service.py
duckcp/transform/: bitable_transform.py  database_transform.py  duckdb_transform.py  file_transform.py
duckcp/typing/: __init__.py  authentication_token_type.py  authenticator_type.py  connection_protocol.py  credential_refresher_type.py  cursor_protocol.py  record_constructor_protocol.py  supports_get_item_protocol.py  transform_type.py
