[project]
name = "duckcp"
version = "0.1.0"
description = "数据同步工具"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "click>=8.2.1",
    "duckdb>=1.3.1",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "pyodps>=0.12.3",
    "python-crontab>=3.2.0",
    "rich>=14.0.0",
    "sqlglot>=26.31.0",
]

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "pyinstaller>=6.14.1",
    "types-urllib3>=1.26.25.14",
]

[project.scripts]
duckcp = "duckcp:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
