[project]
name = "duckcp"
version = "0.1.3"
description = "数据同步工具"
readme = "README.md"
requires-python = ">=3.12" # 类型别名
dependencies = [
    "click>=8.2.1", # Python >=3.10
    "duckdb>=1.3.2", # Python >= 3.9
    "pandas>=2.3.1", # Python >=3.9
    "psycopg2-binary>=2.9.10", # Python >=3.8
    "pyodps>=0.12.4", # Python >=3.7
    "rich>=14.1.0", # Python >=3.8
    "sqlglot>=27.4.1", # Python >=3.9
]

[dependency-groups]
dev = [
    "ipython>=9.3.0", # Python >=3.11
    "pyinstaller>=6.14.1", # Python >=3.8
]

[project.scripts]
duckcp = "duckcp:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
